network/modules/vpc_with_public_and_db_subnets/internet_gateway.tf
resource "aws_internet_gateway" "main" {
  vpc_id = "${aws_vpc.vpc.id}"
  tags   = "${merge(var.tags, map("Name", "${var.environment_name}"))}"
}
