network/modules/vpc_with_public_and_db_subnets/vpc.tf
resource "aws_vpc" "vpc" {
  cidr_block = "${var.vpc_cidr}"
  tags       = "${merge(var.tags, map("Name", "${var.environment_name}"))}"
}
